pkg/main/default/objects/EOS_Type__c/EOS_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A DFS-CLM specific custom setting to store the templates for object mappings between DFS-CLM and SpringCM.</description>
    <label>EOS Type</label>
</CustomObject>