pkg/main/default/objects/EOS_Type__c/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <description>A field to store the folder name generated during the object mapping process.</description>
    <inlineHelpText>A field to store the folder name generated during the object mapping process.</inlineHelpText>
    <label>Folder Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>