pkg/main/default/objects/EOS_Type__c/fields/Folder_Name_Format__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name_Format__c</fullName>
    <description>A field to store the format of the folder name that maps a Salesforce object to a folder in SpringCM.</description>
    <inlineHelpText>A field to store the format of the folder name that maps a Salesforce object to a folder in SpringCM.</inlineHelpText>
    <label>Folder Name Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>