pkg/main/default/objects/EOS_Type__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>A field to store the name of the object in Salesforce that maps to a folder within the hierarchy in SpringCM.</description>
    <inlineHelpText>A field to store the name of the object in Salesforce that maps to a folder within the hierarchy in SpringCM.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>