pkg/main/default/objects/EOS_Type__c/fields/PathFormat__c.field-meta.xml
<CustomField>
	<fullName>PathFormat__c</fullName>
	<description>A field to store the path format of the folder name that maps a Salesforce object to a folder in
		SpringCM.
	</description>
	<inlineHelpText>A field to store the path format of the folder name that maps a Salesforce object to a folder in
		SpringCM.
	</inlineHelpText>
	<label>Path Format</label>
	<length>255</length>
	<type>Text</type>
</CustomField>